--- a/style.css
+++ b/style.css
@@ -83,6 +83,15 @@
 	margin-left: 400;
 }
 
+.main .container .pic {
+	position: absolute;
+	left: 413px;
+	top: 150px;
+}
+
+.main .container .para1 {
+	margin-left:120;
+}
 .main .container p {
 	position: relative;
 	top: 50px;
