--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   padding: 11;
   /*list-style-type: none;*/ 
   width: auto;
-  height: 8%;
+  height: 60px;
   position: relative;
   display: block;
   font-size: 12px;
@@ -22,7 +22,7 @@
   display: block;
   /*float: left;*/
   margin: 0;
-  margin-left: 230;
+  margin-left: -10;
   padding: 0 4px; /* vertical space between each element */
   /*display: inline;*/
 }
@@ -45,9 +45,6 @@
   float: left;
 }
 
-#media li a {
-	margin-right: 300;
-}
 /*
 .side .container {
 	width: 220px;
@@ -66,10 +63,7 @@
 	text-align: right;
 }*/
 
-.main {
-	background-color: #eedfcc;
-	height: 92%;
-}
+
 .main .container {
 	width: 100%;
 	color: #000f0f;
@@ -80,29 +74,28 @@
 	font-weight: bold;
 	top: 25px;
 	font-size: 24px;
-	margin-left: 400;
+	margin-left: 30%;
 }
 
 .main .container .pic {
 	position: absolute;
-	left: 413px;
+	left: 30%;
 	top: 150px;
 }
 
 .main .container .para1 {
-	margin-left:120;
+	margin-left: 150;
 }
 .main .container p {
 	position: relative;
 	top: 50px;
 	font-size: 14px;
-	margin-right: 400;
-	margin-left: 400;
+	margin-right: 30%;
+	margin-left: 30%;
 }
 
 .main .today p {
 	position: fixed;
-	//background-color: #ff0f0f;
 	bottom: -10;
 	right: 20;
 }
